--- a/src/components/TodoForm.css
+++ b/src/components/TodoForm.css
@@ -5,15 +5,21 @@
    height: 100vh;
 }
 .container {
+    background-color: #f1f1f1;
+    max-width: 1200px;
+    min-height: 50%;
     padding: 20px;
+}
+.form-container {
+   
     display: flex;
     justify-content: start;
     align-items: center;
-    height: 50%;
+    min-height: 40%;
     max-width: 1200px;
     flex-direction: column;
     gap: 20px;
-    background-color: #f1f1f1;
+  
 }
 .header input[type="checkbox"] {
     transform: translate(-25px, 32px) scale(2);
@@ -21,8 +27,10 @@
 .header h2 {
     color: blue;
     text-decoration: underline;
+  
 }
 .main-body {
+    
     position: relative;
     width: 100%;
     display: flex;
@@ -32,10 +40,10 @@
    
 }
 input[type="text"] {
-    width: 90%;
+    width: 95%;
     border: 1px solid white;
     padding: 10px;
-    box-shadow: 2px 3px 2px #ddd;
+    box-shadow: 2px 5px 2px #ddd;
 }
 input[type="date"] {
     position: absolute;
@@ -50,4 +58,18 @@ input[type="date"] {
     width: 90%;
     display: flex;
     justify-content: flex-end;
+}
+hr {
+    margin: 10px;
+}
+.todo-container {
+ display: flex;
+ justify-content: center;
+ align-items: center;
+ height: 50%;
+ width: 100%;
+ flex-direction: column;
+ gap: 10px;
+ margin-top: 15px
+
 }
