--- a/src/components/TodoList.css
+++ b/src/components/TodoList.css
@@ -26,6 +26,9 @@ input[type="checkbox"] {
     justify-content: flex-end;
     align-items: center;
 }
+.todo-title {
+    width: 80%;
+}
 .deadline-button {
     display: flex;
     justify-content: center;
@@ -51,4 +54,12 @@ input[type="checkbox"] {
     display: flex;
     justify-content: flex-end;
     flex-direction: column;
+}
+.edit-input {
+    display: inline-block;
+    padding: 10px;
+    width: 80%;
+    border: 2px solid white;
+    margin-left: 10px;
+  
 }
