--- a/src/components/TodoList.css
+++ b/src/components/TodoList.css
@@ -3,9 +3,8 @@
     justify-content: space-between;
     align-items: center;
     width: 95%;
-    height: 100%;
+    height: 60px;
     flex-direction: row;
-    gap: 20px;
     margin-bottom: 10px
 }
 
@@ -40,7 +39,7 @@ input[type="checkbox"] {
     width: 80px;
     text-align: center;
     padding: 10px;
-    border: 2px solid goldenrod;
+    border: 3px solid goldenrod;
     background-color: white;
     border-radius: 10px;
 
@@ -62,4 +61,12 @@ input[type="checkbox"] {
     border: 2px solid white;
     margin-left: 10px;
   
+}
+.important {
+    background-color: red !important;
+    color: white;
+}
+.not-important {
+    background-color: green !important;
+    color: white;
 }
