--- a/src/components/TodoForm.css
+++ b/src/components/TodoForm.css
@@ -56,13 +56,14 @@
 
 input[type="date"] {
     position: absolute;
-    right: 115px;
+    right: 120px;
     bottom: 20px;
     width: 20px;
     border: 0px;
     transform: scale(1.9);
     outline: 0;
-    color: blue;
+    color: red;
+    background-color: #f1f1f1;
 }
 
 .btn {
